// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundDetailsTab Snapshots matches snapshot with full data 1`] = `
<View
  style={
    {
      "backgroundColor": "#f9fafb",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "gap": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E0E0E0",
          "borderRadius": 12,
          "borderWidth": 1,
          "elevation": 2,
          "opacity": 1,
          "overflow": "hidden",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.05,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "padding": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "#E8F5E9",
              },
            ]
          }
        >
          <View
            style={
              {
                "height": 32,
                "width": 32,
              }
            }
            testID="icon-golf"
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "marginLeft": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Championship Course
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "marginTop": 8,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              testID="icon-map-marker"
            />
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 20,
                  },
                  {
                    "color": "#2E7D32",
                  },
                ]
              }
            >
              Melbourne, VIC
            </Text>
            <View
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              testID="icon-chevron-right"
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginLeft": 8,
            }
          }
        >
          <View
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            testID="icon-chevron-right"
          />
        </View>
      </View>
      <View
        style={
          [
            {
              "borderTopWidth": 1,
              "flexDirection": "row",
              "paddingVertical": 12,
            },
            {
              "borderTopColor": "#E0E0E0",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            18
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Holes
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            72
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Par
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            125
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Slope
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            70
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            CR
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E0E0E0",
          "borderRadius": 12,
          "borderWidth": 1,
          "elevation": 2,
          "flexDirection": "row",
          "opacity": 1,
          "padding": 12,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.05,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            },
            {
              "backgroundColor": "#E8F5E9",
            },
          ]
        }
      >
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-trophy"
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "marginLeft": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
              {
                "color": "#6B6B6B",
              },
            ]
          }
        >
          Competition
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 24,
                "marginTop": 2,
              },
              {
                "color": "#1A1A1A",
              },
            ]
          }
        >
          Summer Championship
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          testID="pill-event"
        >
          <Text>
            Event
          </Text>
        </View>
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-chevron-right"
        />
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 26,
              },
              {
                "color": "#1A1A1A",
              },
            ]
          }
        >
          Round Details
        </Text>
        <View
          accessibilityLabel="Edit round details"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#E8F5E9",
              "borderRadius": 8,
              "flexDirection": "row",
              "gap": 4,
              "opacity": 1,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            }
          }
        >
          <View
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
            testID="icon-pencil"
          />
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "600",
                  "lineHeight": 20,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            Edit
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 2,
              "overflow": "hidden",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E0E0E0",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-calendar"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Date
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Formatted: 2025-01-15
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-clock-outline"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Tee Time
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Time: 08:00:00
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-trophy-outline"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Format
            </Text>
            <View
              testID="pill-stableford"
            >
              <Text>
                Stableford
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-golf-tee"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Tee
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              White
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-flag-checkered"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Status
            </Text>
            <View
              testID="status-badge-upcoming"
            >
              <Text>
                upcoming
              </Text>
              <Text
                testID="status-badge-size"
              >
                md
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      testID="scoring-pairs-section"
    >
      <Text
        testID="scoring-pairs-round-id"
      >
        round-1
      </Text>
      <Text
        testID="scoring-pairs-required"
      >
        false
      </Text>
      <Text
        testID="scoring-pairs-premium"
      >
        true
      </Text>
      <Text
        onPress={[MockFunction]}
        testID="scoring-pairs-manage-button"
      >
        Manage
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "lineHeight": 26,
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        Hole Breakdown
      </Text>
      <View
        testID="hole-table"
      >
        <Text
          testID="hole-table-count"
        >
          18
        </Text>
        <Text
          testID="hole-table-tee"
        >
          White
        </Text>
        <Text
          testID="hole-table-units"
        >
          metres
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RoundDetailsTab Snapshots matches snapshot with minimal data 1`] = `
<View
  style={
    {
      "backgroundColor": "#f9fafb",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "gap": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E0E0E0",
          "borderRadius": 12,
          "borderWidth": 1,
          "elevation": 2,
          "opacity": 1,
          "overflow": "hidden",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.05,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "padding": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "#E8F5E9",
              },
            ]
          }
        >
          <View
            style={
              {
                "height": 32,
                "width": 32,
              }
            }
            testID="icon-golf"
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "marginLeft": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Course TBD
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderTopWidth": 1,
              "flexDirection": "row",
              "paddingVertical": 12,
            },
            {
              "borderTopColor": "#E0E0E0",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            -
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Holes
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            -
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Par
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            -
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Slope
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            -
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            CR
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 26,
              },
              {
                "color": "#1A1A1A",
              },
            ]
          }
        >
          Round Details
        </Text>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 2,
              "overflow": "hidden",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E0E0E0",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-calendar"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Date
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Formatted: 2025-01-15
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-clock-outline"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Tee Time
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Time: 08:00:00
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-trophy-outline"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Format
            </Text>
            <View
              testID="pill-stableford"
            >
              <Text>
                Stableford
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-golf-tee"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Tee
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              White
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-flag-checkered"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Status
            </Text>
            <View
              testID="status-badge-upcoming"
            >
              <Text>
                upcoming
              </Text>
              <Text
                testID="status-badge-size"
              >
                md
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      testID="scoring-pairs-section"
    >
      <Text
        testID="scoring-pairs-round-id"
      >
        round-1
      </Text>
      <Text
        testID="scoring-pairs-required"
      >
        false
      </Text>
      <Text
        testID="scoring-pairs-premium"
      >
        false
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "lineHeight": 26,
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        Hole Breakdown
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 2,
              "padding": 24,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E0E0E0",
            },
          ]
        }
      >
        <View
          style={
            {
              "height": 32,
              "width": 32,
            }
          }
          testID="icon-flag"
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
                "marginTop": 12,
                "textAlign": "center",
              },
              {
                "color": "#6B6B6B",
              },
            ]
          }
        >
          No hole information available for this course
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RoundDetailsTab Snapshots matches snapshot without edit capabilities 1`] = `
<View
  style={
    {
      "backgroundColor": "#f9fafb",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "gap": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E0E0E0",
          "borderRadius": 12,
          "borderWidth": 1,
          "elevation": 2,
          "opacity": 1,
          "overflow": "hidden",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.05,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "padding": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "height": 64,
                "justifyContent": "center",
                "width": 64,
              },
              {
                "backgroundColor": "#E8F5E9",
              },
            ]
          }
        >
          <View
            style={
              {
                "height": 32,
                "width": 32,
              }
            }
            testID="icon-golf"
          />
        </View>
        <View
          style={
            {
              "flex": 1,
              "marginLeft": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Championship Course
          </Text>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
                "marginTop": 8,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              testID="icon-map-marker"
            />
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 20,
                  },
                  {
                    "color": "#2E7D32",
                  },
                ]
              }
            >
              Melbourne, VIC
            </Text>
            <View
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              testID="icon-chevron-right"
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "justifyContent": "center",
              "marginLeft": 8,
            }
          }
        >
          <View
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            testID="icon-chevron-right"
          />
        </View>
      </View>
      <View
        style={
          [
            {
              "borderTopWidth": 1,
              "flexDirection": "row",
              "paddingVertical": 12,
            },
            {
              "borderTopColor": "#E0E0E0",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            18
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Holes
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            72
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Par
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            125
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            Slope
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignSelf": "stretch",
                "marginVertical": 4,
                "width": 1,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 28,
                },
                {
                  "color": "#2E7D32",
                },
              ]
            }
          >
            70
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                  "marginTop": 2,
                },
                {
                  "color": "#6B6B6B",
                },
              ]
            }
          >
            CR
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E0E0E0",
          "borderRadius": 12,
          "borderWidth": 1,
          "elevation": 2,
          "flexDirection": "row",
          "opacity": 1,
          "padding": 12,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.05,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 8,
              "height": 48,
              "justifyContent": "center",
              "width": 48,
            },
            {
              "backgroundColor": "#E8F5E9",
            },
          ]
        }
      >
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-trophy"
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "marginLeft": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
              {
                "color": "#6B6B6B",
              },
            ]
          }
        >
          Competition
        </Text>
        <Text
          numberOfLines={1}
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 24,
                "marginTop": 2,
              },
              {
                "color": "#1A1A1A",
              },
            ]
          }
        >
          Summer Championship
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          testID="pill-event"
        >
          <Text>
            Event
          </Text>
        </View>
        <View
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          testID="icon-chevron-right"
        />
      </View>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 26,
              },
              {
                "color": "#1A1A1A",
              },
            ]
          }
        >
          Round Details
        </Text>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 2,
              "overflow": "hidden",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E0E0E0",
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-calendar"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Date
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Formatted: 2025-01-15
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-clock-outline"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Tee Time
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              Time: 08:00:00
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-trophy-outline"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Format
            </Text>
            <View
              testID="pill-stableford"
            >
              <Text>
                Stableford
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-golf-tee"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Tee
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "600",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#1A1A1A",
                  },
                ]
              }
            >
              White
            </Text>
          </View>
        </View>
        <View
          style={
            [
              {
                "height": 1,
                "marginHorizontal": 12,
              },
              {
                "backgroundColor": "#E0E0E0",
              },
            ]
          }
        />
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "padding": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 40,
                "justifyContent": "center",
                "width": 40,
              }
            }
          >
            <View
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              testID="icon-flag-checkered"
            />
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginLeft": 12,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Status
            </Text>
            <View
              testID="status-badge-upcoming"
            >
              <Text>
                upcoming
              </Text>
              <Text
                testID="status-badge-size"
              >
                md
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      testID="scoring-pairs-section"
    >
      <Text
        testID="scoring-pairs-round-id"
      >
        round-1
      </Text>
      <Text
        testID="scoring-pairs-required"
      >
        false
      </Text>
      <Text
        testID="scoring-pairs-premium"
      >
        false
      </Text>
    </View>
    <View
      style={
        {
          "marginBottom": 12,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "lineHeight": 26,
            },
            {
              "color": "#1A1A1A",
            },
          ]
        }
      >
        Hole Breakdown
      </Text>
      <View
        testID="hole-table"
      >
        <Text
          testID="hole-table-count"
        >
          18
        </Text>
        <Text
          testID="hole-table-tee"
        >
          White
        </Text>
        <Text
          testID="hole-table-units"
        >
          metres
        </Text>
      </View>
    </View>
  </View>
</View>
`;
